--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "atom": ">0.50.0"
   },
   "dependencies": {
-    "atom-linter": "^3.4.0",
-    "xregexp": "^2.0.0"
+    "atom-linter": "^4.0.0"
   },
   "providedServices": {
     "linter": {
