build: configure Renovate

--- a/package.json
+++ b/package.json
@@ -58,5 +58,20 @@
     "no_stand_alone_at": {
       "level": "error"
     }
+  },
+  "renovate": {
+    "extends": [
+      "config:base"
+    ],
+    "semanticCommits": true,
+    "rangeStrategy": "pin",
+    "packageRules": [
+      {
+        "packagePatterns": [
+          "^eslint"
+        ],
+        "groupName": "ESLint packages"
+      }
+    ]
   }
 }
